--- a/src/App.css
+++ b/src/App.css
@@ -22,4 +22,76 @@ li{list-style: none;}
   width: 300px;
   height: 300px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.myP{
+  color: #f00;
+  background-color: skyblue;
+}
+
+.tab > ul {display: flex;}
+.tab > ul > li {padding: 10px; cursor: pointer; border-radius: 5px 5px 0 0; border: 1px solid #000;}
+.tab > ul > li.active {background: skyblue;}
+
+#app {
+  height: 100%;
+}
+html,
+body {
+  position: relative;
+  height: 100%;
+}
+
+body {
+  background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+
+.swiper {
+  width: 100%;
+  height: 500px;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  background-color: gainsboro;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.lists > li {
+  padding: 10px 0;
+  cursor: pointer;
+}
+.lists > li:hover {
+  background: skyblue;
+}
+
+.btnWrap{
+  display: flex;
+  justify-content: end;
+}
+.btnWrap button {
+  padding: 5px 15px;
 }
